fix of overflow-y scrollbar visbility

--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -8,8 +8,10 @@
   margin-left: 4vw;
   width: 100%;
   height: 10vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-left: orange 1px dashed;
+  background-color: none;
+  padding-bottom: 0;
 }
 
 .topics-h3 {
